--- a/search-app/src/app/app.component.html
+++ b/search-app/src/app/app.component.html
@@ -1,1 +1,51 @@
-<button class="btn btn-primary">Hello world</button>
+<div class="page-container">
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" href="#">Elasticsearch Movie Application</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home
+              <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://github.com/jmorla">About the author</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Page Content -->
+  <div class="container content-wrap">
+    <div class="row">
+
+      <div class="col-lg-3">
+        <app-search></app-search>
+      </div>
+
+      <div class="col-lg-9">
+        <div class="row">
+          <div class="col-lg-4 col-md-6 mb-4">
+            <app-movie-card></app-movie-card>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+  <!-- Footer -->
+  <footer class="py-5 bg-dark footer">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Codigo Libre Dominicano 2019</p>
+    </div>
+    <!-- /.container -->
+  </footer>
+</div>
