--- a/search-app/src/styles.scss
+++ b/search-app/src/styles.scss
@@ -1,1 +1,22 @@
 /* You can add global styles to this file, and also import other style files */
+//  body {
+//   padding-top: 89px;
+// }
+
+
+.page-container {
+  position: relative;
+  min-height: 100vh;
+  padding-top: 89px;
+}
+
+.content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
