--- a/search-app/src/app/search-box/search-box.component.html
+++ b/search-app/src/app/search-box/search-box.component.html
@@ -15,6 +15,18 @@
         </select>
       </div>
       <div class="form-group">
+        <label for="distributor">Distributor</label>
+        <select id="distributor" class="form-control">
+          <option>Select Distributor</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="type">Type</label>
+        <select id="type" class="form-control">
+          <option>Select Type</option>
+        </select>
+      </div>
+      <div class="form-group">
         <label for="budget">Production Budget</label>
         <div class="form-check">
           <input
