--- a/search-app/src/app/app.component.html
+++ b/search-app/src/app/app.component.html
@@ -32,8 +32,26 @@
 
       <div class="col-lg-9">
         <div class="row">
-          <div class="col-lg-4 col-md-6 mb-4">
-            <app-movie-card></app-movie-card>
+          <div class="col-lg-4 col-md-12 mb-4" *ngFor="let movie of movies"  [@simpleFadeAnimation]>
+            <app-movie-card [movie]="movie"></app-movie-card>
+          </div>
+          <div class="col-lg-4 col-md-12" *ngIf="!loading" [@simpleFadeAnimation]>
+              <app-movie-card-loading></app-movie-card-loading>
+          </div>
+          <div class="col-lg-4 col-md-12" *ngIf="!loading" [@simpleFadeAnimation]>
+              <app-movie-card-loading></app-movie-card-loading>
+          </div>
+          <div class="col-lg-4 col-md-12" *ngIf="!loading" [@simpleFadeAnimation]>
+              <app-movie-card-loading></app-movie-card-loading>
+          </div>
+          <div class="col-lg-4 col-md-12" *ngIf="!loading" [@simpleFadeAnimation]>
+              <app-movie-card-loading></app-movie-card-loading>
+          </div>
+          <div class="col-md-12" *ngIf="!loading && !movies">
+              <app-empty-search 
+              [title]="'No results were found'" 
+              [description]="'Use the search panel to filter your favorite movies'">
+            </app-empty-search>
           </div>
         </div>
       </div>
