--- a/search-app/src/app/movie-card/movie-card.component.html
+++ b/search-app/src/app/movie-card/movie-card.component.html
@@ -45,7 +45,7 @@
         <i *ngIf="!star">&#9734;</i>
       </span>
       <br>
-      Tomatazos {{ movie.Rotten_Tomatoes_Rating ? movie.Rotten_Tomatoes_Rating + '%' : 'none'}}
+      Tomatazos: {{ movie.Rotten_Tomatoes_Rating ? movie.Rotten_Tomatoes_Rating + '%' : 'none'}}
     </span>
     
   </div>
