--- a/search-app/src/app/search-box/search-box.component.html
+++ b/search-app/src/app/search-box/search-box.component.html
@@ -92,6 +92,7 @@
           <label for="budget">USD$ 100,000.00</label>
         </div>
       </div>
+        <button class="btn btn-primary col-lg-12 col-md-12">Search Movie</button>
     </form>
   </div>
 </div>
