--- a/search-app/src/app/app.component.html
+++ b/search-app/src/app/app.component.html
@@ -27,7 +27,7 @@
     <div class="row">
 
       <div class="col-lg-3">
-        <app-search></app-search>
+        <app-search (search)="onSearch($event)"></app-search>
       </div>
 
       <div class="col-lg-9">
