--- a/search-app/src/app/search-box/search-box.component.html
+++ b/search-app/src/app/search-box/search-box.component.html
@@ -6,24 +6,27 @@
     <form [formGroup]="searchForm">
       <div class="form-group">
         <label for="name">Movie name</label>
-        <input id="name" type="text" class="form-control" placeholder="Movie name">
+        <input formControlName="title" id="name" type="text" class="form-control" placeholder="Movie name">
       </div>
       <div class="form-group">
         <label for="director">Director</label>
-        <select id="director" class="form-control">
-          <option>Select Director</option>
+        <select formControlName="director" id="director" class="form-control">
+          <option value="">::Select Director::</option>
+          <option *ngFor="let director of directors" value="{{director}}">{{director}}</option>
         </select>
       </div>
       <div class="form-group">
         <label for="distributor">Distributor</label>
-        <select id="distributor" class="form-control">
-          <option>Select Distributor</option>
+        <select formControlName="distributor" id="distributor" class="form-control">
+          <option value="">::Select Distributor::</option>
+          <option *ngFor="let distributor of distributors" value="{{distributor}}">{{distributor}}</option>
         </select>
       </div>
       <div class="form-group">
         <label for="type">Type</label>
-        <select id="type" class="form-control">
-          <option>Select Type</option>
+        <select formControlName="type" id="type" class="form-control">
+          <option value="">::Select Type::</option>
+          <option *ngFor="let type of types" value="{{type}}">{{type}}</option>
         </select>
       </div>
       <div class="form-group">
@@ -74,7 +77,7 @@
         </div>
         <div *ngIf="searchForm.get('budgetOperator').value !== ''">
           <input type="range" class="form-control-range" id="budget">
-          <label for="budget">USD$ 100,000.00</label>
+          <label formControlName="productionBudgetMin" for="budget">USD$ 100,000.00</label>
         </div>
         <div class="form-check" *ngIf="searchForm.get('budgetOperator').value !== ''">
           <input
@@ -88,11 +91,11 @@
           </label>
         </div>
         <div *ngIf="searchForm.get('budgetOperator').value === 'bt'">
-          <input type="range" class="form-control-range" id="budget">
+          <input formControlName="productionBudgetMax" type="range" class="form-control-range" id="budget">
           <label for="budget">USD$ 100,000.00</label>
         </div>
       </div>
-        <button class="btn btn-primary col-lg-12 col-md-12">Search Movie</button>
+        <button class="btn btn-primary col-lg-12 col-md-12" (click)="onSearch()">Search Movie</button>
     </form>
   </div>
 </div>
